--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 
     <string name="player_service_name">Player Service</string>
 
+    <string name="lyrics_source_prefix">Lyrics source: </string>
+    <string name="lyrics_source_via_youtubemusic"> (via YouTube Music)</string>
     <string name="lyrics_source_youtube">YouTube</string>
     <string name="lyrics_source_petitlyrics">PetitLyrics</string>
 
