--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,11 @@
     <string name="now_playing_queue">Queue</string>
     <string name="now_playing_related">Related</string>
 
-    <string name="show_furigana">Show furigana</string>
     <string name="lyrics_unavailable">Lyrics unavailable</string>
 
     <string name="player_service_name">Player Service</string>
 
-    <string name="lyrics_source_prefix">Lyrics source: </string>
+    <string name="lyrics_source_prefix">Source:&#160;</string>
     <string name="lyrics_source_via_youtubemusic"> (via YouTube Music)</string>
     <string name="lyrics_source_youtube">YouTube</string>
     <string name="lyrics_source_petitlyrics">PetitLyrics</string>
