--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,21 @@
 
     <string name="accessibility_service_description">TODO Desc</string>
     <string name="generic_network_error">A network error occurred</string>
-    <string name="s_key_custom_volume_enabled">custom_volume_enabled</string>
+
+    <string name="s_page_preferences">Preferences</string>
+    <string name="s_group_theming">Theming</string>
+
+    <string name="s_key_accent_source">Accent colour</string>
+    <string name="s_option_accent_thumbnail">From thumbnail</string>
+    <string name="s_option_accent_system">From system theme</string>
+
+    <string name="s_key_np_theme_mode">Now playing theme mode</string>
+    <string name="s_option_np_accent_background">Colour background with accent</string>
+    <string name="s_option_np_accent_elements">Colour elements with accent</string>
+    <string name="s_option_np_accent_none">Don\'t use accent colour</string>
+
+    <string name="s_group_lyrics">Lyrics</string>
+
 
     <!-- Settings -->
 <!--    <string name="setting_t_lang_app">App language</string>-->
