--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,17 @@
 <resources>
-    <string name="app_name">SpMp</string>
-    <string name="data_api_key">AIzaSyAm0nMoIUejG5rlqdk8TV4ugwUG8tMEx0Y</string>
-    <string name="yt_music_creds">X-Goog-AuthUser: 0\nCookie: CONSENT=PENDING+914; __Secure-YEC=CgtqMlp5S3U2MTRnUSimp66YBg%3D%3D; PREF=tz=Europe.London&amp;f6=40000000&amp;f7=1; SOCS=CAESFggDEgk0Njk3MzYzNjMaBWVuLUdCIAEaBgiAvaWYBg; SID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOMq8dg8TAhxxaocXGW0jYiPA.; __Secure-1PSID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOM1WKOkhVNyLsj7Kd1NzrrHw.; __Secure-3PSID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOMtvRMuFuvdTPoZrRvgn4bKA.; HSID=AvF-tWp5kDgdWWoMc; SSID=ASlN74bfPQWE8Alif; APISID=lLQocg3F27oz3kCD/A6LSC68g9gHcovAr3; SAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; __Secure-1PAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; __Secure-3PAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; LOGIN_INFO=AFmmF2swRgIhAK5tMhjaFGficawP8cIfmNvLAsoQ1JRqRQgGL55O4Ba9AiEA2XiShSIde4m-HmQtbHXf_0mVHd7ZXES9YgLflCGcVLc:QUQ3MjNmekc1N3dBV0FBTDZpNGR2bE9OSzJYcERENTZXejJZeEJjQUU0WUpfcGxEbHFBa0ZHSTJRUC10cklKYlcwVnBKOFVJS2QwNjVHSkxQMEZrQ0F1LXhfRTlzMS0wdUxkVThxTEFSWW9IejdrLVQ1VW9yN1VLbDNxTnVMZHV2RlBIaXMtZUQ2dkJoN2RMVWpJSkl5SlNFY1dUSEJRSG5B; SIDCC=AEf-XMSckFKf9_vQZExzEwhzQ4asIzbovGQJv76wtX055oWxF7B9DVJsTLkuZ-yv05vX9nxhkls; __Secure-1PSIDCC=AEf-XMSIWQ6EARwMH0VNwMOx3R_zopCwSupbLz9xg7241sATGpfS7DdapcsY37uis1LJfMTMbw; __Secure-3PSIDCC=AEf-XMTvMPzj4zRTCMmVbKCLcffPbnvjcGwvNjUjDwrXTfNlJQ160Y_GV4ZOuKPdJIf0txnYdQ; YSC=WJtJ3rYpUqo; wide=1; CONSISTENCY=AGXVzq-J9HQaQQQOdlW5MmtJGgDSc1HzEwGnngWO3R6qZFWC4471z0jncPyv9Hy_ySFS8GNZTZlwi3d2998U6HaRx1eLyMRw0KcPGHj17T4kYVdPbOarKRODA_sFPuwbbHJ8z3E5Lnxi4yljvbCClosvIdsYGlqkUrCj34g1wVjxClt5n24kEcQ5pyOPeUIidL35n8gfjbyKNqkNg8n7SO2Dnx2K5Zw
+    <string name="app_name" translatable="false">SpMp</string>
+    <string name="yt_music_creds" translatable="false">X-Goog-AuthUser: 0\nCookie: CONSENT=PENDING+914; __Secure-YEC=CgtqMlp5S3U2MTRnUSimp66YBg%3D%3D; PREF=tz=Europe.London&amp;f6=40000000&amp;f7=1; SOCS=CAESFggDEgk0Njk3MzYzNjMaBWVuLUdCIAEaBgiAvaWYBg; SID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOMq8dg8TAhxxaocXGW0jYiPA.; __Secure-1PSID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOM1WKOkhVNyLsj7Kd1NzrrHw.; __Secure-3PSID=NwiQj54yKZJoH9AxDaKTMF7OnykGMgusoeJ0XLFh6LPLErOMtvRMuFuvdTPoZrRvgn4bKA.; HSID=AvF-tWp5kDgdWWoMc; SSID=ASlN74bfPQWE8Alif; APISID=lLQocg3F27oz3kCD/A6LSC68g9gHcovAr3; SAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; __Secure-1PAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; __Secure-3PAPISID=NeTWwR95ac9VdjBS/ApT9m1jBdpTWioWMB; LOGIN_INFO=AFmmF2swRgIhAK5tMhjaFGficawP8cIfmNvLAsoQ1JRqRQgGL55O4Ba9AiEA2XiShSIde4m-HmQtbHXf_0mVHd7ZXES9YgLflCGcVLc:QUQ3MjNmekc1N3dBV0FBTDZpNGR2bE9OSzJYcERENTZXejJZeEJjQUU0WUpfcGxEbHFBa0ZHSTJRUC10cklKYlcwVnBKOFVJS2QwNjVHSkxQMEZrQ0F1LXhfRTlzMS0wdUxkVThxTEFSWW9IejdrLVQ1VW9yN1VLbDNxTnVMZHV2RlBIaXMtZUQ2dkJoN2RMVWpJSkl5SlNFY1dUSEJRSG5B; SIDCC=AEf-XMSckFKf9_vQZExzEwhzQ4asIzbovGQJv76wtX055oWxF7B9DVJsTLkuZ-yv05vX9nxhkls; __Secure-1PSIDCC=AEf-XMSIWQ6EARwMH0VNwMOx3R_zopCwSupbLz9xg7241sATGpfS7DdapcsY37uis1LJfMTMbw; __Secure-3PSIDCC=AEf-XMTvMPzj4zRTCMmVbKCLcffPbnvjcGwvNjUjDwrXTfNlJQ160Y_GV4ZOuKPdJIf0txnYdQ; YSC=WJtJ3rYpUqo; wide=1; CONSISTENCY=AGXVzq-J9HQaQQQOdlW5MmtJGgDSc1HzEwGnngWO3R6qZFWC4471z0jncPyv9Hy_ySFS8GNZTZlwi3d2998U6HaRx1eLyMRw0KcPGHj17T4kYVdPbOarKRODA_sFPuwbbHJ8z3E5Lnxi4yljvbCClosvIdsYGlqkUrCj34g1wVjxClt5n24kEcQ5pyOPeUIidL35n8gfjbyKNqkNg8n7SO2Dnx2K5Zw
     </string>
-    <string name="ngrok_api_key">2GjOoO6u94PEfptejpFRyUeN7zZ_2Qxdi89uuva6mieFf4Yg1</string>
-    <string name="server_api_key">6d5ff86c7ee15d07e0d7398b1cb0e9d1</string>
+    <string name="ngrok_api_key" translatable="false">2GjOoO6u94PEfptejpFRyUeN7zZ_2Qxdi89uuva6mieFf4Yg1</string>
+    <string name="server_api_key" translatable="false">6d5ff86c7ee15d07e0d7398b1cb0e9d1</string>
 
     <string name="videos">Videos</string>
     <string name="songs">Songs</string>
     <string name="artists">Artists</string>
     <string name="playlists">Playlists</string>
     <string name="albums">Albums</string>
+
+    <string name="loading_feed">Loading feed</string>
 
     <string name="media_pause">Pause</string>
     <string name="media_play">Play</string>
@@ -32,6 +33,13 @@
     <string name="generic_network_error">A network error occurred</string>
 
     <string name="s_page_preferences">Preferences</string>
+
+    <string name="s_group_general">General</string>
+    <string name="s_key_interface_lang">Interface language</string>
+    <string name="s_sub_interface_lang">Language used for interface text</string>
+    <string name="s_key_data_lang">Data language</string>
+    <string name="s_sub_data_lang">Language used for song and artist titles, etc. (if available)</string>
+
     <string name="s_group_theming">Theming</string>
 
     <string name="s_key_accent_source">Accent colour</string>
@@ -44,29 +52,5 @@
     <string name="s_option_np_accent_none">Don\'t use accent colour</string>
 
     <string name="s_group_lyrics">Lyrics</string>
-
-
-    <!-- Settings -->
-<!--    <string name="setting_t_lang_app">App language</string>-->
-<!--    <string name="setting_d_lang_app">Language for UI text</string>-->
-<!--    <string name="setting_t_lang_data">Data language</string>-->
-<!--    <string name="setting_d_lang_data">Language for song/artist metadata</string>-->
-<!--    <string name="lang_system">System</string>-->
-<!--    <string name="lang_native">Native</string>-->
-
-<!--    <string name="setting_t_theme_mode">Now playing theme mode</string>-->
-<!--    <string name="setting_d_theme_mode">Method to use for colouring the now playing interface</string>-->
-<!--    <string name="theme_mode_background">Background</string>-->
-<!--    <string name="theme_mode_elements">Elements</string>-->
-
-<!--    <string name="setting_t_audio_quality_wifi">Audio quality (WiFi)</string>-->
-<!--    <string name="setting_d_audio_quality_wifi">Quality of audio to stream over WiFI connections</string>-->
-<!--    <string name="setting_t_audio_quality_mobile">Audio quality (Mobile data)</string>-->
-<!--    <string name="setting_d_audio_quality_mobile">Quality of audio to stream over mobile data connections</string>-->
-<!--    <string name="audio_quality_139">Low (ID: 139)</string>-->
-<!--    <string name="audio_quality_140">Standard (ID: 140)</string>-->
-
-<!--    <string name="setting_t_auto_download_threshold">Auto download view threshold</string>-->
-<!--    <string name="setting_d_auto_download_threshold">Songs you\'ve listened to at least this many times will be downloaded automatically when on WiFi</string>-->
 
 </resources>
