--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -34,4 +34,5 @@
     <string name="s_key_data_lang">データ言語</string>
     <string name="s_sub_interface_lang">アプリのUIに使われる言語</string>
     <string name="s_sub_data_lang">曲の名前などに使われる言語</string>
+    <string name="s_group_other">その他</string>
 </resources>
