--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,19 @@
     <string name="ngrok_api_key" translatable="false">2GjOoO6u94PEfptejpFRyUeN7zZ_2Qxdi89uuva6mieFf4Yg1</string>
     <string name="server_api_key" translatable="false">6d5ff86c7ee15d07e0d7398b1cb0e9d1</string>
 
-    <string name="videos">Videos</string>
     <string name="songs">Songs</string>
-    <string name="artists">Artists</string>
+    <string name="song_name">Song name</string>
+
+    <string name="videos">Videos</string>
     <string name="playlists">Playlists</string>
+
+    <string name="artists">Artists</string>
+    <string name="artist">Artist</string>
+
     <string name="albums">Albums</string>
+    <string name="album">Album</string>
+
+    <string name="action_back">Back</string>
 
     <string name="loading_feed">Loading feed</string>
 
