--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="albums">Albums</string>
     <string name="album">Album</string>
 
-    <string name="action_back">Back</string>
+    <string name="action_close">Close</string>
 
     <string name="loading_feed">Loading feed</string>
 
