--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,9 @@
     <string name="s_key_data_lang">Data language</string>
     <string name="s_sub_data_lang">Language used for song and artist titles, etc. (if available)</string>
 
+    <string name="s_key_vol_steps">Volume steps</string>
+    <string name="s_sub_vol_steps">Amount of steps when changing application volume</string>
+
     <string name="s_group_theming">Theming</string>
 
     <string name="s_key_accent_source">Accent colour</string>
@@ -111,7 +114,7 @@
     <string name="s_option_vol_intercept_mode_always">When media session is active</string>
     <string name="s_option_vol_intercept_mode_app">When the app is open</string>
     <string name="s_option_vol_intercept_mode_never">Never</string>
-
+    
     <string name="s_key_acc_screen_off">Enable while screen is off</string>
     <string name="s_sub_acc_screen_off">Requires root privledges</string>
 
