--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,9 @@
     <string name="s_key_open_np_on_song_played">Open player when song clicked</string>
     <string name="s_sub_open_np_on_song_played">The now playing menu will open automatically when clicking and playing a song</string>
 
+    <string name="s_key_persistent_queue">Persistent song queue</string>
+    <string name="s_sub_persistent_queue">Song queue will persist even when closing the app</string>
+
     <string name="s_group_theming">Theming</string>
 
     <string name="s_key_accent_source">Accent colour</string>
