--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="yt_api_key" translatable="false">***REMOVED***</string>
     <string name="yt_i_api_key" translatable="false">AIzaSyAO_FJ2SlqU8Q4STEHLGCilw_Y9_11qcW8</string>
 
+    <string name="home_feed_listen_again">Listen again</string>
+    <string name="home_feed_mixed_for_you">Mixed for you</string>
+    <string name="home_feed_new_releases">New releases</string>
+    <string name="home_feed_moods_and_genres">Recommended playlists</string>
+
     <string name="song_name">Song name</string>
     <string name="videos">Videos</string>
     
