Complete home feed rewrite

--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -83,4 +83,46 @@
     <string name="s_sub_vol_intercept_mode">アクセシビリティサービスはボリュームボタンをインターセプトして、システム音量の代わりに SpMp の音量を変えることができます</string>
     <string name="s_sub_vol_intercept_notification">アクセシビリティサービスがボリュームボタンをインターセプトした時に画面にメッセージを表示しする</string>
     <string name="s_sub_vol_steps">アクセシビリティサービスで音量を変える時のステップ量</string>
+    <string name="home_feed_listen_again">もう一度聴く</string>
+    <string name="home_feed_mixed_for_you">おすすめのミックス</string>
+    <string name="home_feed_moods_and_genres">おすすめのプレイリスト</string>
+    <string name="home_feed_charts">チャート</string>
+    <string name="home_feed_new_releases">新作</string>
+    <string name="home_feed_similar_to">似ているかも</string>
+    <string name="playlist">プレイリスト</string>
+    <string name="song">曲</string>
+    <string name="action_cancel">キャンセル</string>
+    <string name="action_confirm_action">はい</string>
+    <string name="action_deny_action">いいえ</string>
+    <string name="theme_title_new">新しいテーマ</string>
+    <string name="theme_title_default">デフォルトテーマ</string>
+    <string name="queue_shuffle">シャッフル</string>
+    <string name="queue_clear">クリア</string>
+    <string name="playlist_chip_play">再生</string>
+    <string name="playlist_chip_shuffle">シャッフル</string>
+    <string name="playlist_chip_radio">ラジオ</string>
+    <string name="playlist_chip_details">情報</string>
+    <string name="playlist_chip_open">開く</string>
+    <string name="artist_info_label">アーティスト情報</string>
+    <string name="download_service_name">ダウンロードサービス</string>
+    <string name="download_service_error_name">ダウンロードサービスエラー</string>
+    <string name="lyrics_sync_none">シンクなし</string>
+    <string name="lyrics_sync_line">行をシンク</string>
+    <string name="lyrics_sync_word">字をシンク</string>
+    <string name="acc_ser_enable_dialog_btn_root">ルートを使う</string>
+    <string name="s_key_feed_initial_rows">最初のフィード行数</string>
+    <string name="s_sub_feed_initial_rows">自動的にロードするフィード行の最小数</string>
+    <string name="s_key_open_np_on_song_played">曲をタップしたらプレーヤーを開く</string>
+    <string name="s_sub_open_np_on_song_played">曲をタップしたときにプレーヤーが自動で開きます</string>
+    <string name="s_key_persistent_queue">再生キューを覚える</string>
+    <string name="s_sub_persistent_queue">アプリを閉じても曲キューは保持されます</string>
+    <string name="s_key_current_theme">現在のテーマ</string>
+    <string name="s_theme_editor_title">テーマを変更する</string>
+    <string name="s_option_accent_theme">テーマから</string>
+    <string name="s_key_feed_enable_charts_row">「チャート」行を有効にする</string>
+    <string name="s_key_feed_enable_mix_row">「おすすめのミックス」行を有効にする</string>
+    <string name="s_key_feed_enable_listen_row">「もう一度聴く」行を有効にする</string>
+    <string name="s_key_feed_enable_moods_row">「おすすめのプレイリスト」行を有効にする</string>
+    <string name="s_key_feed_enable_new_row">「新作」行を有効にする</string>
+    <string name="s_group_home_feed">おすすめフィード</string>
 </resources>
