--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -89,6 +89,7 @@
     <string name="home_feed_charts">チャート</string>
     <string name="home_feed_new_releases">新作</string>
     <string name="home_feed_similar_to">似ているかも</string>
+    <string name="home_feed_more_from">他の曲</string>
     <string name="playlist">プレイリスト</string>
     <string name="song">曲</string>
     <string name="action_cancel">キャンセル</string>
